# wor-kinematics

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO.md  licence.txt
config/: config.txt  sensor_noise_config.txt
include/application/: Button.hpp  CommandlineArgument.hpp  CommunicationService.hpp  LogTextCtrl.hpp  Logger.hpp  MainApplication.hpp  MainFrameWindow.hpp  Slider.h  ToggleButton.h  WidgetTraceFunction.hpp
include/base/: FileTraceFunction.hpp  ITraceFunction.hpp  NotificationEvent.hpp  NotificationFunctionTypeTraits.hpp  NotificationHandler.hpp  Notifier.hpp  ObjectId.hpp  Observer.hpp  Queue.hpp  StdOutTraceFunction.hpp  Trace.hpp
include/config/: Config.hpp  config.h.in
include/messaging/: Client.hpp  Message.hpp  MessageHandler.hpp  MessageTypes.hpp  Server.hpp  Session.hpp
include/model/: AbstractActuator.hpp  AbstractAgent.hpp  AbstractFilter.h  AbstractSensor.hpp  BoundedVector.hpp  CompassSensor.h  ConcreteDrivers.h  ConcreteFilters.h  DriveStrategy.h  Goal.hpp  KalmanFilter.h  LaserDistanceSensor.hpp  LidarSensor.h  ModelObject.hpp  NoisySensor.h  OdometerSensor.h  ParticleFilter.h  Path.h  Robot.hpp  RobotWorld.hpp  SteeringActuator.hpp  Wall.hpp  WayPoint.hpp
include/pathAlgorithm/: AStar.hpp
include/utils/: FileIO.h  MathUtils.hpp  Matrix.hpp  Shape2DUtils.hpp  StringUtils.h  TimeStamp.hpp  TypeInfo.hpp
include/view/: GoalShape.hpp  LineShape.hpp  PathShape.h  RectangleShape.hpp  RobotShape.hpp  RobotWorldCanvas.hpp  Shape.hpp  ViewObject.hpp  WallShape.hpp  WayPointShape.hpp
include/widgets/: Point.hpp  Region.hpp  Size.hpp  Widgets.hpp
robotworld_original/: AUTHORS  Doxyfile  LeakSanitizerSuppression.txt  Makefile.am  Makefile.in  NEWS  PathsAndSymbols.xml  README  aclocal.m4  autogen.sh  configure  configure.ac  readme.md
robotworld_original/linux/: .gitignore
robotworld_original/src/: AStar.cpp  AStar.hpp  AbstractActuator.cpp  AbstractActuator.hpp  AbstractAgent.hpp  Button.hpp  Client.hpp  CommandlineArgument.hpp  GoalShape.cpp  GoalShape.hpp  LaserDistanceSensor.cpp  LaserDistanceSensor.hpp  LineShape.cpp  LineShape.hpp  MainFrameWindow.cpp  MainFrameWindow.hpp  Makefile.am  Makefile.in  MathUtils.cpp  ModelObject.cpp  ModelObject.hpp  NotificationFunctionTypeTraits.hpp  NotificationHandler.hpp  RectangleShape.cpp  RectangleShape.hpp  RobotShape.cpp  RobotWorldCanvas.cpp  Size.hpp  StdOutTraceFunction.cpp  StdOutTraceFunction.hpp  TimeStamp.hpp  Trace.cpp  ViewObject.cpp  ViewObject.hpp  Wall.cpp  WayPoint.hpp  WayPointShape.cpp  WayPointShape.hpp  WidgetTraceFunction.cpp
src/: AStar.cpp  AbstractActuator.cpp  AbstractAgent.cpp  AbstractSensor.cpp  BoundedVector.cpp  CommunicationService.cpp  CompassSensor.cpp  ConcreteDrivers.cpp  ConcreteFilters.cpp  DriveStrategy.cpp  FileIO.cpp  FileTraceFunction.cpp  Goal.cpp  GoalShape.cpp  KalmanFilter.cpp  LaserDistanceSensor.cpp  LidarSensor.cpp  LineShape.cpp  LogTextCtrl.cpp  Logger.cpp  Main.cpp  MainApplication.cpp  MainFrameWindow.cpp  MathUtils.cpp  Matrix.inc  ModelObject.cpp  NoisySensor.cpp  NotificationHandler.cpp  Notifier.cpp  ObjectId.cpp  Observer.cpp  OdometerSensor.cpp  ParticleFilter.cpp  Path.cpp  PathShape.cpp  RectangleShape.cpp  Robot.cpp  RobotShape.cpp  RobotWorld.cpp  RobotWorldCanvas.cpp  (+12 more)
